fix: albums height on mobile

--- a/styles/Albums.module.css
+++ b/styles/Albums.module.css
@@ -110,7 +110,6 @@
 
 .album_fan img {
   height: auto;
-  max-height: 100%;
 
   position: absolute;
   border: 5px solid white;
